fix(e2ee banner): remove z-index

--- a/src/components/E2EEncryptionSupportBanner/E2EEncryptionSupportBanner.styles.scss
+++ b/src/components/E2EEncryptionSupportBanner/E2EEncryptionSupportBanner.styles.scss
@@ -3,7 +3,6 @@
 	display: flex;
 	position: fixed;
 	justify-content: center;
-	z-index: 50;
 	p {
 		margin: 0;
 	}
